[package]
name = "payments-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
error-stack = { version = "0.1", features = ["std"] }
random-string = "1.0.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0.144", features = ["derive"] }
